--- a/backend/package.json
+++ b/backend/package.json
@@ -42,7 +42,8 @@
     "nodemailer": "^6.9.7",
     "openai": "^4.20.1",
     "razorpay": "^2.9.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "jest": "^29.7.0",
